# manz

./: README.md  docker-compose.yml
.githooks/hooks/: pre-commit
.github/workflows/: commit-stage.yml
backend/: .env.example  Dockerfile.backend  Dockerfile.backend.dockerignore  manage.py  pyproject.toml
backend/features/: grocery_list.feature  meal_planning.feature
backend/manz/: apps.py  backend.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/manz/migrations/: 0001_initial.py  0002_meal.py
backend/manz/tests/: test_authentification.py  test_item.py  test_list_meals.py  test_mealview.py  test_recipe.py  test_resgistration.py  test_schedule.py
backend/manzapi/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: Dockerfile.frontend  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: layout.tsx
frontend/app/grocery-list/: page.tsx
frontend/app/items/: page.tsx
frontend/app/login/: page.tsx
frontend/app/meals/: page.tsx
frontend/app/meals/new/: page.tsx
frontend/app/planner/: page.tsx
frontend/app/recipes/: page.tsx
frontend/app/recipes/new/: page.tsx
frontend/app/register/: page.tsx
frontend/app/schedule/: page.tsx
frontend/app/shopping-list/: page.tsx
frontend/app/sign-up/: page.tsx
frontend/components/: CreateRecipeDialog.tsx  MealList.tsx  MealSelectionDialog.tsx  RecipeCard.tsx  RecipeList.tsx  ShoppingList.tsx  WeeklyPlanner.tsx  login-form.tsx  sign-up-form.tsx
frontend/lib/: types.ts  utils.ts
